# astrotex

./: Cargo.toml  test.text
src/: main.rs
